Add model classes and basic SqlNode to Rel conversion implementation

--- a/etl/etl-datastage/build.gradle
+++ b/etl/etl-datastage/build.gradle
@@ -10,7 +10,7 @@ repositories {
 }
 
 dependencies {
-    project(":core")
+    implementation 'xerces:xercesImpl:2.12.2'
     testImplementation platform('org.junit:junit-bom:5.10.0')
     testImplementation 'org.junit.jupiter:junit-jupiter'
 }
