--- a/settings.gradle
+++ b/settings.gradle
@@ -1,12 +1,9 @@
 rootProject.name = 'calcite-new'
 //include 'parser'
 include 'sql'
-include 'sql:parser'
-findProject(':sql:parser')?.name = 'parser'
-include 'sql:core'
-findProject(':sql:sql-core')?.name = 'sql-core'
+include 'sql:sql-parser'
+include 'sql:sql-core'
 include 'core'
 include 'etl'
-include 'etl:datastage'
-findProject(':etl:datastage')?.name = 'datastage'
+include 'etl:etl-datastage'
 
