--- a/settings.gradle
+++ b/settings.gradle
@@ -6,4 +6,4 @@ include 'sql:sql-core'
 include 'core'
 include 'etl'
 include 'etl:etl-datastage'
-include 'sql:sql-recommender'
+include 'sql:sql-analyzer'
