--- a/settings.gradle
+++ b/settings.gradle
@@ -7,3 +7,5 @@ include 'core'
 include 'etl'
 include 'etl:etl-datastage'
 include 'sql:sql-analyzer'
+include 'sql:sql-processing'
+include 'sql:sql-processing:sql-processing-local'
