--- a/sql/sql-processing/sql-processing-local/build.gradle
+++ b/sql/sql-processing/sql-processing-local/build.gradle
@@ -15,12 +15,14 @@ repositories {
 
 dependencies {
     implementation(project(":sql:sql-core"))
+    implementation project(':core')
     implementation 'org.projectlombok:lombok:1.18.32'
     implementation 'org.springframework.boot:spring-boot-starter'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'jakarta.persistence:jakarta.persistence-api:3.1.0'
     implementation 'org.slf4j:slf4j-api:2.0.9'
     implementation 'ch.qos.logback:logback-classic:1.4.14'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'org.postgresql:postgresql'
     annotationProcessor 'org.projectlombok:lombok'
