--- a/sql/sql-core/build.gradle
+++ b/sql/sql-core/build.gradle
@@ -20,16 +20,24 @@ dependencies {
   implementation 'org.projectlombok:lombok:1.18.32'
   implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
   implementation 'jakarta.persistence:jakarta.persistence-api:3.1.0'
+  implementation 'ch.qos.logback:logback-classic:1.4.14'
   compileOnly 'org.projectlombok:lombok'
   annotationProcessor 'org.projectlombok:lombok'
   testFixturesImplementation(testFixtures(project(":core")))
   testFixturesApi(testFixtures(project(":sql:sql-parser")))
   testFixturesImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.0'
   testImplementation(testFixtures(project(":sql:sql-core")))
+  testImplementation 'org.junit.jupiter:junit-jupiter'
   testImplementation 'org.codehaus.groovy:groovy-all:3.0.19'
   testImplementation 'org.spockframework:spock-core:2.3-groovy-3.0'
-  testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.0'
-  testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.10.0'
+  testImplementation 'org.junit.jupiter:junit-jupiter-api'
+  testImplementation 'org.junit.jupiter:junit-jupiter-engine'
+  testImplementation 'org.junit.jupiter:junit-jupiter:5.10.0'
+  testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.0'
+  testImplementation 'org.mockito:mockito-core:5.11.0'
+  testImplementation 'org.mockito:mockito-junit-jupiter:5.11.0'
+  testImplementation 'org.assertj:assertj-core:3.25.3'
+
 }
 
 test {
