--- a/core/build.gradle
+++ b/core/build.gradle
@@ -2,6 +2,8 @@ plugins {
     id 'java-library'
     id 'groovy'
     id 'java-test-fixtures'
+    id 'org.springframework.boot' version '3.2.5'
+    id 'io.spring.dependency-management' version '1.1.4'
 }
 
 group = 'com.calcite-new'
@@ -13,12 +15,22 @@ repositories {
 
 dependencies {
     api group: 'org.apache.calcite', name: 'calcite-core', version: '1.38.0'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter'
 
     testImplementation 'org.codehaus.groovy:groovy-all:3.0.19'
     testImplementation 'org.spockframework:spock-core:2.3-groovy-3.0'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.0'
     testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.10.0'
     testFixturesImplementation group: 'org.apache.calcite', name: 'calcite-core', version: '1.38.0'
+}
+
+bootJar {
+    enabled = false
+}
+
+jar {
+    enabled = true
 }
 
 test {
