--- a/sql/sql-core/build.gradle
+++ b/sql/sql-core/build.gradle
@@ -3,7 +3,7 @@ plugins {
   id 'groovy'
   id 'java-test-fixtures'
   id 'io.freefair.lombok' version '8.6'
-  id 'org.springframework.boot' version '3.2.5'
+  id 'org.springframework.boot' version '3.2.6'
   id 'io.spring.dependency-management' version '1.1.4'
 }
 
@@ -15,31 +15,40 @@ repositories {
 }
 
 dependencies {
-  implementation(project(":core"))
-  implementation(project(":sql:sql-parser"))
-  implementation 'org.projectlombok:lombok:1.18.32'
+  implementation project(':core')
+  implementation project(':sql:sql-parser')
+
   implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-  implementation 'jakarta.persistence:jakarta.persistence-api:3.1.0'
-  implementation 'ch.qos.logback:logback-classic:1.4.14'
-  compileOnly 'org.projectlombok:lombok'
-  annotationProcessor 'org.projectlombok:lombok'
-  testFixturesImplementation(testFixtures(project(":core")))
-  testFixturesApi(testFixtures(project(":sql:sql-parser")))
-  testFixturesImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.0'
-  testImplementation(testFixtures(project(":sql:sql-core")))
+
+  compileOnly 'org.projectlombok:lombok:1.18.32'
+  annotationProcessor 'org.projectlombok:lombok:1.18.32'
+
+  testFixturesImplementation testFixtures(project(':core'))
+  testFixturesApi testFixtures(project(':sql:sql-parser'))
+  testFixturesImplementation 'org.junit.jupiter:junit-jupiter:5.10.2'
+
+  testImplementation testFixtures(project(':sql:sql-core'))
+  testImplementation platform('org.junit:junit-bom:5.10.2')
   testImplementation 'org.junit.jupiter:junit-jupiter'
   testImplementation 'org.codehaus.groovy:groovy-all:3.0.19'
   testImplementation 'org.spockframework:spock-core:2.3-groovy-3.0'
-  testImplementation 'org.junit.jupiter:junit-jupiter-api'
-  testImplementation 'org.junit.jupiter:junit-jupiter-engine'
-  testImplementation 'org.junit.jupiter:junit-jupiter:5.10.0'
-  testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.0'
-  testImplementation 'org.mockito:mockito-core:5.11.0'
   testImplementation 'org.mockito:mockito-junit-jupiter:5.11.0'
   testImplementation 'org.assertj:assertj-core:3.25.3'
+}
 
+configurations.configureEach {
+  exclude group: 'ch.qos.logback', module: 'logback-classic'
+  exclude group: 'ch.qos.logback', module: 'logback-core'
 }
 
 test {
   useJUnitPlatform()
+}
+
+bootJar {
+  enabled = false
+}
+
+jar {
+  enabled = true
 }
