Updated git ignore and added pg to pojo support

--- a/core/src/main/resources/application.properties
+++ b/core/src/main/resources/application.properties
@@ -10,5 +10,5 @@ hibernate.current_session_context_class=thread
 hibernate.connection.pool_size=10
 
 # Entity mappings
-hibernate.mapping.classes=com.calcite_new.core.data_ingestor.entity.QueryLog,
-  com.calcite_new.core.data_ingestor.entity.IndicesEntity, com.calcite_new.core.data_ingestor.entity.TableEntity,com.calcite_new.core.data_ingestor.entity.ColumnEntity,com.calcite_new.core.data_ingestor.entity.ViewEntity,com.calcite_new.core.data_ingestor.entity.ExternalTableEntity,com.calcite_new.core.data_ingestor.entity.FunctionEntity,com.calcite_new.core.data_ingestor.entity.IndicesEntity,com.calcite_new.core.data_ingestor.entity.MacroEntity,com.calcite_new.core.data_ingestor.entity.PartitionEntity,com.calcite_new.core.data_ingestor.entity.ProcedureEntity
+hibernate.mapping.classes=com.calcite_new.core.entity.QueryLog,
+  com.calcite_new.core.data_ingestor.entity.IndicesEntity, com.calcite_new.core.entity.TableEntity,com.calcite_new.core.data_ingestor.entity.ColumnEntity,com.calcite_new.core.data_ingestor.entity.ViewEntity,com.calcite_new.core.data_ingestor.entity.ExternalTableEntity,com.calcite_new.core.data_ingestor.entity.FunctionEntity,com.calcite_new.core.data_ingestor.entity.IndicesEntity,com.calcite_new.core.data_ingestor.entity.MacroEntity,com.calcite_new.core.data_ingestor.entity.PartitionEntity,com.calcite_new.core.data_ingestor.entity.ProcedureEntity
