--- a/core/build.gradle
+++ b/core/build.gradle
@@ -1,4 +1,5 @@
 plugins {
+    // Use 'java-library' to enable the 'api' dependency configuration
     id 'java-library'
     id 'groovy'
     id 'java-test-fixtures'
@@ -6,23 +7,30 @@ plugins {
     id 'io.spring.dependency-management' version '1.1.4'
 }
 
-group = 'com.calcite-new'
-version = '1.0-SNAPSHOT'
-
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    api group: 'org.apache.calcite', name: 'calcite-core', version: '1.38.0'
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    implementation 'org.springframework.boot:spring-boot-starter'
+    // This now works because of the 'java-library' plugin
+    api 'org.apache.calcite:calcite-core:1.38.0'
 
-    testImplementation 'org.codehaus.groovy:groovy-all:3.0.19'
-    testImplementation 'org.spockframework:spock-core:2.3-groovy-3.0'
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.0'
-    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.10.0'
-    testFixturesImplementation group: 'org.apache.calcite', name: 'calcite-core', version: '1.38.0'
+    // Spring and Hibernate dependencies
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.slf4j:slf4j-api'
+
+    // Lombok for reducing boilerplate code
+    compileOnly 'org.projectlombok:lombok:1.18.32'
+    annotationProcessor 'org.projectlombok:lombok:1.18.32'
+
+    // == TEST DEPENDENCIES ==
+    testImplementation 'org.junit.jupiter:junit-jupiter'
+    testImplementation 'ch.qos.logback:logback-classic'
+    testRuntimeOnly 'org.postgresql:postgresql'
+}
+
+test {
+    useJUnitPlatform()
 }
 
 bootJar {
@@ -31,8 +39,4 @@ bootJar {
 
 jar {
     enabled = true
-}
-
-test {
-    useJUnitPlatform()
 }
