--- a/core/src/main/resources/application.properties
+++ b/core/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 hibernate.connection.driver_class=org.postgresql.Driver
 hibernate.connection.url=jdbc:postgresql://192.168.1.10:5432/postgres
-hibernate.connection.username=postgres
-hibernate.connection.password=PGTruvis@2025
+hibernate.connection.username=
+hibernate.connection.password=
 hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 hibernate.show_sql=true
 hibernate.format_sql=true
